	* data/exult_si.flx, data/si/*: new data file (exult_si.flx)
	* Makefile.*, exult.spec.in: build/distribute new data file
	* data/bg/BGmap.shp, data/si/SImap.shp: BG and SI maps
	* ??game.*, gamewin.*, intrinsics.*, Face_button.cc, Paperdoll_gump*.*:
	exultbg_flx to gameflx. (exult_bg.flx for BG, exult_si.flx for SI)
	* cheat.cc: use real maps for the teleport cheat

2001-06-15  Jeff Freedman  <jeff@amy.nerble.net>

	* gamewin.cc: Emulate_swapout() now does chunks 3 or more away.
	* combat.cc: Manual combat mode works.

2001-06-14  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* bgintrinsics.h: added 2 guesses
	* exult.cc: don't show hand cursor when clicking left mouse button

2001-06-14  Dancer Vesperman <dancer@users.sourceforge.net>
	- Code Nazi
	* server/objserial.cc: std::string, std::memcpy, std::strlen

2001-06-13  Jeff Freedman  <jeff@amy.nerble.net>

	* Several: 'opponent' from Combat_schedule is now 'target' in
	Actor. This fixes bug where combat started automatically.

2001-06-12  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* gumps/AudioOptions_gump.cc: removed SFX conversion option
	* exultmenu.cc: same for Exult setup menu
	* ucmachine.cc: set party flag on avatar (for spells like magic storm)

2001-06-12  Ryan Nunn <triforce@merlin.net.au>
	* audio/xmidi.cc, audio/midi_drivers/win_midiout.cc : Changes to make
	  Exult SMP safe in Win32.

2001-06-12  Tristan Tarrant  <nadir@users.sourceforge.net>
	* configure.in: HAVE_GLADE is false if no GTK available

2001-06-12  Jeff Freedman  <jeff@amy.nerble.net>
	* shapes: SFX fields read from weapons.dat.
	* combat.cc,actors.cc: Play weapon SFX.
	* actors.cc,gamewin.cc:  Flash red outline when injured.

2001-06-10  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* actors.*, keyactions.cc: double clicking avatar shows inventory again
	* gumps/gump_types.h: extracted Gumpshapefile to a header file
	* gamewin.cc, gumps/Gump.cc, gumps/Gump_widget.*, gumps/gump_types.h: